# proekt

./: main.py  pyproject.toml
data/: base.py  forms.py  models.py
templates/: _base.html  _navigation.html  departure.html  index.html  tour.html
